# 241-327_Ampleenkov

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini  requirements.txt
backend/lab1/: app.py  database.py  generate_data.py  models.py  run.py  schemas.py  settings.py
backend/migrations/: env.py
backend/migrations/versions/: 73b8450e43a5_initial_migration.py
client/: CMakeLists.txt  createdevicedialog.cpp  createdevicedialog.h  device.h  device_json_adapter.cpp  device_json_adapter.h  httpclient.cpp  httpclient.h  idevice_adapter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
nginx/: Dockerfile
nginx/certs/: lab2.crt  lab2.key
nginx/templates/: default.conf.template
